[package]
name = "logistic-class"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "*"
statrs = "*"
linfa = "*"
ndarray = "*"
ndarray-csv = "*"
csv = "*"
flate2 = "*"
ndarray-stats = "*"
num-traits = "*"
serde = "*"
thiserror = "*"
linfa-datasets = "*"
linfa-logistic = "*"
ndarray-linalg = "*"
linfa-linalg = "*"
ndarray-rand = "*"
unicode-normalization = "*"
regex = "*"
encoding = "*"
sprs = "*"
iai = "*"
curl = "*"
tar = "*"
linfa-preprocessing = "*"